traversal.snake.Snake.scala.error
Compilation error:
Snake:3: error: illegal start of simple expression
  while( !final() ) {
          ^Snake:6: error: ')' expected but '}' found.
}
^Snake:10: error: identifier expected but 'final' found.
def final(): Boolean = {
    ^